# ANNOP

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  annop.bzl  build.sh  compile_commands.json  demo.cc  external  faiss_generate_hnsw.py  hnsw.cc  load_and_run  load_and_run.cc  run.sh  saved_model.pbtxt
annop/: BUILD  CMakeLists.txt
annop/cc/: BUILD
annop/cc/common/: BUILD  IndexCommonSingleton.h  buffer.hh  embedding.cc  embedding.h  embedding.hh  graph.cc  graph.hh  graph.hpp  graph_index.cc  graph_index.h  graph_test.cc  index.cc  index.h  index.hh  singleton.h
annop/cc/kernel/: BUILD  ann_index_kernel.h  gather_neighbors.cc  gather_neighbors.h  gather_neighbors_kernel.cc  time_three_op.cc  time_two_op.cc
annop/cc/ops/: hnsw_ops.cc  time_two_ops.cc
annop/kernel/: BUILD  ZeroOutOp.cc
annop/python/: demo.py
models/times_model/: saved_model.pbtxt
